# HET

./: .deepsource.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  README.md  hetero_edgesoftmax.sln  install_requirements.sh
hetero_edgesoftmax/: CMakeLists.txt  DGLHackKernelTest.vcxproj  Makefile  dysfunct_load_util.h  hetero_edgesoftmax.vcxproj  kernel.cu  myhyb_test.vcxproj
hetero_edgesoftmax/buildutils/genutils/: gen_headers.py  gen_torch_export.py
hetero_edgesoftmax/data/: get_data.sh
hetero_edgesoftmax/data/ogbn_mag_0.1/: has_coo_2.npy  writing_coo_2.npy
hetero_edgesoftmax/e2e_cases/: HGT.cu.cc  RGCN.cu.cc  test_compiler_discover_sputnik_library.cu.cc
hetero_edgesoftmax/experiments/: benchmark_all.sh  e2e_dgl_profile.sh  extract_all_ncu_breakdown.sh  nsys_profile_all.sh  optimized_breakdown_motivator.sh  profile_all.sh  run.sh  run_het_rgat.sh  run_het_rgcn.sh  run_template_type_breakdown_eval.sh  upload_benchmark_results.py  utils_get_git_root_path.py
hetero_edgesoftmax/experiments/records/: 2022.12.27.run_hgt_rgat.sh
hetero_edgesoftmax/include/: CMakeLists.txt  EdgeSoftmax.h  EdgeSoftmaxCOO.h  EdgeSoftmaxCSC.h  EdgeSoftmaxCSR.h  EdgeSoftmaxMultiCOOs.h  EdgeSoftmaxMultiCSCs.h  EdgeSoftmaxMultiCSRs.h  hetero_edgesoftmax.h  kernel_enums.h  macros.h  utils.cu.h  utils.h
hetero_edgesoftmax/include/3rdpartyMatmul/: 3rdpartyMatmul.h  Matmul9.cu.h  kernel10.cuh  shmem_matmul.cuh
hetero_edgesoftmax/include/DGLHackKernel/: DGLHackKernel.h  DGLHackKernelInit.h  DGLHackUtils.h  FusedGAT.cu.h  FusedGAT.h  FusedGATBackward.cu.h  FusedGATBackward.h  HGTBackPropGradientSmAFusion.h  HGTExperimental.h  HGTKernelsBlockConfigurations.h  HGTLayers.h  HGTLayersBackwardKernels.cu.h  HGTLayersCompactAsOfNodesForwardKernels.cu.h  HGTLayersKernels.cu.h  HGTLayersVanillaForwardKernels.cu.h  HGTPreprocessing.h  MySimpleNDArray.h  NodeLinear.h  RGATLayersBackwardKernels.cu.h  RGATLayersKernels.cu.h  RGCNLayer1.h  RGCNLayer1Backward.h  RGCNLayer1BackwardMyHYB.h  RGCNLayer1MyHYB.h  RGCNLayers.h  RGCNLayersBackward.h  RGCNLayersBackwardKernels.cu.h  RGCNLayersKernels.cu.h  my_shmem_sgemm_functor.cu.h  mysgemm_KernelsBlockConfigurations.h
hetero_edgesoftmax/include/EdgeAttention_4/: EdgeAttentionCOO.h  EdgeAttentionCOO_128_16.h  EdgeAttentionCOO_128_8.h  EdgeAttentionCOO_256_16.h  EdgeAttentionCOO_256_32.h  EdgeAttentionCOO_256_8.h  EdgeAttentionCOO_512_32.h  EdgeAttentionCOO_512_32_A100.h  EdgeAttentionCOO_512_32_asyncmemcpy.h  EdgeAttention_4.h  mysgemm_functor.cu.h
hetero_edgesoftmax/include/EdgeSoftmax_1/: EdgeSoftmaxCOO.h  EdgeSoftmaxCSC.h  EdgeSoftmaxCSR.h  EdgeSoftmaxMultiCOOs.h  EdgeSoftmaxMultiCSCs.h  EdgeSoftmaxMultiCSRs.h  EdgeSoftmax_1.h
hetero_edgesoftmax/include/EdgeSoftmax_4/: EdgeSoftmaxCOO_4.h  EdgeSoftmaxCSC_4.h  EdgeSoftmaxCSR_4.h  EdgeSoftmaxMultiCOOs_4.h  EdgeSoftmaxMultiCSCs_4.h  EdgeSoftmaxMultiCSRs_4.h
hetero_edgesoftmax/include/MyHyb/: MyHyb.h
hetero_edgesoftmax/include/utils/: cuda_helper_device_functions.cu.h  flatten_coord_index.h  nd_transpose.h  variadic_tricks.h
hetero_edgesoftmax/misc/artifacts/: hgt_acm_dgl_bw.csv  hgt_acm_dgl_fw.csv  hgt_acm_dgl_opt.csv  machine.nfo
hetero_edgesoftmax/misc/godbolt_snippets/: 3YfEK6W3f.cpp  (+4 more)
hetero_edgesoftmax/python/: __init__.py  backend.py  kernels.py  utils.py
hetero_edgesoftmax/script/: disass.sh  dump_npy.py  list_unused_headers.sh  ncu_profile.sh  network_analysis.ipynb  preprocess_freebase_exq.py  print_speed_of_light.sh  run_profile.sh  setup_dev_env.sh  test_class_method_inspect.py  test_pytorch_custom_op_load.py  test_pytorch_register_custom_grad_func.py  test_pytorch_register_custom_grad_func_with_dummy_list.py  try_argparse.py
hetero_edgesoftmax/src/: kernel.cu  kernel.cu.cc  show_smid.cu  test_DGLHackHGTBackwardFusion.cu  test_DGLHackHGTBackwardFusion.cu.cc  test_DGLHackKernel.cu  test_DGLHackKernel.cu.cc  test_DGLHackSimpleLoadBalance.cu.cc  test_compiler_discover_cublas.cu.cc  test_compiler_discover_cublaslt.cu.cc  test_compiler_discover_cutlass_library.cu  test_compiler_discover_cutlass_library.cu.cc  test_hyb.cu  test_hyb.cu.cc
hetero_edgesoftmax/tests_src/: test_compiler_discover_sputnik_library.cu.cc
hetero_edgesoftmax/utils/: _assert_in_het_dev_root.sh  _do_all_cases.sh  benchmark_all.sh  calc_param_sweep_het_tables.py  calc_tables.py  check_git_root.py  classify_het_kernels.py  detect_pwd.py  extract_all_ncu_breakdown.sh  extract_nsys_avg_kern_sum.py  load_nsight_report.py  load_nsys_report.py  match_trace_filenames.py  print_machine_info.py  profile_ncu_all.sh  recalc_bg_breakdown.py  run_graphiler_and_its_baseline.py  stat_sass_inst.py  trace_nsys_all.sh  upload_benchmark_results.py  upload_cache_and_roofline.py  upload_kern_trace.py  upload_motivator_graphiler_breakdown.py
hrt/: CMakeLists.txt  hrt.vcxproj
hrt/experiments/: rgnn_showcase_motivator.sh  run_graphiler_breakdown_motivator.sh  run_het_breakdown_motivator.sh  run_het_rgcn.sh
hrt/include/: CMakeLists.txt  hrt.h  kernel_enums.h
hrt/misc/: artifacts
hrt/python/: __init__.py
hrt/script/: setup_dev_env.sh  setup_graphiler_nvrtc_libpath.sh
hrt/src/: kernel.cu.cc  test_DGLHackKernel.cu.cc  test_compiler_discover_cublas.cu.cc  test_compiler_discover_cublaslt.cu.cc  test_compiler_discover_cutlass_library.cu.cc  test_hyb.cu.cc  test_ndarray_utils.cu.cc
hrt/utils/: __init__.py  _assert_in_het_dev_root.sh  _do_all_cases.sh  benchmark_64.sh  benchmark_all.sh  calc_HET_dram_table.py  calc_param_sweep_het_tables.py  calc_tables.py  classify_het_kernels.py  code_modifier.py  detect_pwd.py  extract_all_ncu_breakdown.sh  extract_nsys_avg_kern_sum.py  extract_nsys_kern_trace_avg_sm_metrics.py  gspread_append_arithmetic_intensity.py  load_nsight_report.py  match_trace_filenames.py  plot_roofline.py  profile_ncu_all.sh  run_graphiler_and_its_baseline.py  stat_sass_inst.py  test_assert_in_het_dev_root.sh  test_do_all_cases.sh  upload_benchmark_64_results.py  upload_benchmark_results.py  upload_cache_and_roofline.py  upload_kern_trace.py  upload_motivator_graphiler_breakdown.py
(+494 files in other folders)
